--- a/kb/mkb2/html/app_robot/robot_devcenter.html
+++ b/kb/mkb2/html/app_robot/robot_devcenter.html
@@ -14,12 +14,12 @@
 	</head>
 	<body>
 				<div class="um-win um-page" id="main">
-                     <div class="um-header" >
+                     <!--div class="um-header" >
 					 <a class="um-back" href="#" onclick="summer.closeWin()"></a>
                      	<h3>问答</h3>
 
 
-                     </div>
+                     </div-->
 					<div class="um-content p5" id="content">
 						 <div id="initQuestionList">
 
@@ -31,7 +31,7 @@
 					</div>
 					 <div class="um-footer">
 						<div class="chat-input-box">
-							<img src="../../img/speech.png" alt="" class="change-input-type" data-flag='speech'/>
+							<!--img src="../../img/speech.png" alt="" class="change-input-type" data-flag='speech'/-->
 
 							<div class="show-input">
 								<input type="text" class="form-control chat-input" placeholder="亲,有什么想要问我的吗?"/>
@@ -136,14 +136,14 @@
 		</script>
 		<script>
 			//不同机器人配置项
-			var __robotPhotoUrl="../../img/robot1.png",__robotHelloText="您好，我是云小智，有什么可以帮到您？",__robotApiKey="8002test";
+			var __robotPhotoUrl="../../image/common/robotl.png",__robotHelloText="您好，我是用友开发者中心客户，有什么问题都可以问我？",__robotApiKey="8282f6b7089b45ad86bffde181dfa3ca";//8001
 		</script>
 		<script type="text/javascript" src="../../js/public/jquery.min.js"></script>
 		<script type="text/javascript" src=" ../../js/public/summer.js"></script>
 		<script type="text/javascript" src=" ../../js/public/doT.min.js"></script>
 		<script type="text/javascript" src=" ../../js/public/layer_mobile/layer.js"></script>
 		<script type="text/javascript" src=" ../../js/public/kbconfig.js"></script>
-		<script type="text/javascript" src="./robot2.js"></script>
+		<script type="text/javascript" src="./robot.js"></script>
 		<script type="text/javascript" src="./data.js"></script>
 		<script type="text/javascript" src=" ../../js/Frameworks/iuapmobile.frameworks.ui.js"></script>
 
